K8s yaml files/central-station-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Windows\system32\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: central-station
  name: central-station
spec:
  ports:
    - name: "8092"
      port: 8092
      targetPort: 8092
  selector:
    io.kompose.service: central-station
status:
  loadBalancer: {}
