K8s yaml files/rain-detector-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Windows\system32\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: rain-detector
  name: rain-detector
spec:
  ports:
    - name: "8091"
      port: 8091
      targetPort: 8091
  selector:
    io.kompose.service: rain-detector
status:
  loadBalancer: {}
