K8s yaml files/weather-station-8-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Windows\system32\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: weather-station-8
  name: weather-station-8
spec:
  ports:
    - name: "8088"
      port: 8088
      targetPort: 8088
  selector:
    io.kompose.service: weather-station-8
status:
  loadBalancer: {}
